--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"es-toolkit": "^1.39.10",
+		"better-auth": "^1.3.28",
 		"tailwind-merge": "^3.3.1"
 	}
 }
