--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 	},
 	"dependencies": {
 		"better-auth": "^1.3.28",
-		"tailwind-merge": "^3.3.1"
+		"kysely": "^0.28.8",
+		"kysely-d1": "^0.4.0",
+		"tailwind-merge": "^3.3.1",
+		"valibot": "^1.1.0"
 	}
 }
