--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"better-auth": "^1.3.28",
 		"kysely": "^0.28.8",
 		"kysely-d1": "^0.4.0",
+		"svelte-french-toast": "^2.0.0-alpha.0",
 		"tailwind-merge": "^3.3.1",
 		"valibot": "^1.1.0"
 	}
