--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,9 +3,7 @@
 	"name": "mcsrtools-hotkeys",
 	"main": ".svelte-kit/cloudflare/_worker.js",
 	"compatibility_date": "2025-10-04",
-	"compatibility_flags": [
-		"nodejs_als"
-	],
+	"compatibility_flags": ["nodejs_als"],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": ".svelte-kit/cloudflare"
